# ReaperPrime

./: App.cpp  App.h  AppOpenCL.cpp  AppOpenCL.h  CMakeLists.txt  CPUAlgos_global.cpp  CPUAlgos_global.h  CPUAlgos_hp7.cpp  CPUAlgos_mtrlt.cpp  CPUMiner.cpp  CSieveOfEratosthenes.cpp  CSieveOfEratosthenes.h  Config.cpp  Global.h  README.md  primecoin.conf
